--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: ruby
 rvm:
-  - 2.0.0-p647
-  - 2.1.7
-  - 2.2.3
+  - ruby-head
+  - 2.3.0
+  - 2.2.4
+  - 2.1.8
+matrix:
+  allow_failures:
+    - rvm: ruby-head
 before_install: gem install bundler -v 1.10.6
